YYC3-Tool-开发工具链/YYC3-Tool-开发工具链-vize/crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_for__v_for_on_template.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<template v-for=\"item in list\"><div>{{ item }}</div></template>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<!--[-->`)
  _ssrRenderList(_ctx.list, (item) => {
    _push(`<div>${_ssrInterpolate(item)}</div>`)
  })
  _push(`<!--]-->`)
}
