YYC3-Tool-开发工具链/YYC3-Tool-开发工具链-vize/crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_for__v_for_with_index.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<div v-for=\"(item, key, index) in list\">{{ index }}</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<!--[-->`)
  _ssrRenderList(_ctx.list, (item, key, index) => {
    _push(`<div>${_ssrInterpolate(index)}</div>`)
  })
  _push(`<!--]-->`)
}
