YYC3-Tool-开发工具链/YYC3-Tool-开发工具链-vize/crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_for__v_for_with_key.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<div v-for=\"(item, key) in list\">{{ item }} - {{ key }}</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<!--[-->`)
  _ssrRenderList(_ctx.list, (item, key) => {
    _push(`<div>${_ssrInterpolate(item)} - ${_ssrInterpolate(key)}</div>`)
  })
  _push(`<!--]-->`)
}
